deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepforge
  labels:
    app.kubernetes.io/name: deepforge
